// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedDeleteBaselinesModal should dispatch actions 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(DeleteBaselinesModal)
        modalOpened={true}
      >
        <DeleteBaselinesModal
          clearSelectedBaselines={[Function]}
          deleteSelectedBaselines={[Function]}
          modalOpened={true}
          revertBaselineFetch={[Function]}
          selectedBaselineIds={
            Array [
              "abcd",
              "efgh",
            ]
          }
        >
          <Modal
            actions={
              Array [
                <Button
                  onClick={[Function]}
                  variant="danger"
                >
                  Delete baselines
                </Button>,
                <Button
                  variant="link"
                >
                  Cancel
                </Button>,
              ]
            }
            appendTo={
              <body
                class="pf-c-backdrop__open"
              >
                <div
                  aria-hidden="true"
                >
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-2"
                        aria-labelledby="pf-modal-part-1"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="0"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-0"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="1"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-1"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-2"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="2"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="3"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                >
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-3"
                        aria-labelledby="pf-modal-part-2"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="4"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-1"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="5"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-2"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-3"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="6"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="7"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                >
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-4"
                        aria-labelledby="pf-modal-part-3"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="8"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-2"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="9"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-3"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-4"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="10"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="11"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                >
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-5"
                        aria-labelledby="pf-modal-part-4"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="12"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-3"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="13"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-4"
                          >
                            Delete baseline
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-5"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="14"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baseline
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="15"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                >
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-6"
                        aria-labelledby="pf-modal-part-5"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="16"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-4"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="17"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-5"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-6"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="18"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="19"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                >
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-7"
                        aria-labelledby="pf-modal-part-6"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="20"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-5"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="21"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-6"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-7"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="22"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="23"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-8"
                        aria-labelledby="pf-modal-part-7"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="24"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-6"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="25"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-7"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-8"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="26"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="27"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
            aria-describedby=""
            aria-label=""
            aria-labelledby=""
            className=""
            hasNoBodyWrapper={false}
            isOpen={true}
            onClose={[Function]}
            ouiaSafe={true}
            showClose={true}
            title="Delete baselines"
            variant="small"
          >
            <Portal
              containerInfo={
                <div>
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-8"
                        aria-labelledby="pf-modal-part-7"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="24"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-6"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="25"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              transform=""
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-7"
                          >
                            Delete baselines
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-8"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="26"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="27"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <ModalContent
                actions={
                  Array [
                    <Button
                      onClick={[Function]}
                      variant="danger"
                    >
                      Delete baselines
                    </Button>,
                    <Button
                      variant="link"
                    >
                      Cancel
                    </Button>,
                  ]
                }
                aria-describedby=""
                aria-label=""
                aria-labelledby=""
                boxId="pf-modal-part-6"
                className=""
                descriptorId="pf-modal-part-8"
                hasNoBodyWrapper={false}
                isOpen={true}
                labelId="pf-modal-part-7"
                onClose={[Function]}
                ouiaSafe={true}
                showClose={true}
                title="Delete baselines"
                variant="small"
              >
                <Backdrop>
                  <div
                    className="pf-c-backdrop"
                  >
                    <FocusTrap
                      active={true}
                      className="pf-l-bullseye"
                      focusTrapOptions={
                        Object {
                          "clickOutsideDeactivates": true,
                        }
                      }
                      paused={false}
                    >
                      <div
                        className="pf-l-bullseye"
                      >
                        <ModalBox
                          aria-describedby="pf-modal-part-8"
                          aria-label=""
                          aria-labelledby="pf-modal-part-7"
                          className=""
                          data-ouia-component-id={24}
                          data-ouia-component-type="PF4/ModalContent"
                          data-ouia-safe={true}
                          id="pf-modal-part-6"
                          style={Object {}}
                          variant="small"
                        >
                          <div
                            aria-describedby="pf-modal-part-8"
                            aria-label={null}
                            aria-labelledby="pf-modal-part-7"
                            aria-modal="true"
                            className="pf-c-modal-box pf-m-sm"
                            data-ouia-component-id={24}
                            data-ouia-component-type="PF4/ModalContent"
                            data-ouia-safe={true}
                            id="pf-modal-part-6"
                            role="dialog"
                            style={Object {}}
                          >
                            <ModalBoxCloseButton
                              onClose={[Function]}
                            >
                              <Button
                                aria-label="Close"
                                className=""
                                onClick={[Function]}
                                variant="plain"
                              >
                                <button
                                  aria-disabled={false}
                                  aria-label="Close"
                                  className="pf-c-button pf-m-plain"
                                  data-ouia-component-id={25}
                                  data-ouia-component-type="PF4/Button"
                                  data-ouia-safe={true}
                                  disabled={false}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <TimesIcon
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      aria-labelledby={null}
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style={
                                        Object {
                                          "verticalAlign": "-0.125em",
                                        }
                                      }
                                      viewBox="0 0 352 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                        transform=""
                                      />
                                    </svg>
                                  </TimesIcon>
                                </button>
                              </Button>
                            </ModalBoxCloseButton>
                            <ModalBoxHeader>
                              <header
                                className="pf-c-modal-box__header"
                              >
                                <ModalBoxTitle
                                  className="pf-c-modal-box__title"
                                  id="pf-modal-part-7"
                                  title="Delete baselines"
                                >
                                  <h1
                                    className="pf-c-modal-box__title pf-c-modal-box__title"
                                    id="pf-modal-part-7"
                                  >
                                    Delete baselines
                                  </h1>
                                </ModalBoxTitle>
                              </header>
                            </ModalBoxHeader>
                            <ModalBoxBody
                              id="pf-modal-part-8"
                            >
                              <div
                                className="pf-c-modal-box__body"
                                id="pf-modal-part-8"
                              >
                                Deleting a baseline is permanent and cannot be undone.
                              </div>
                            </ModalBoxBody>
                            <ModalBoxFooter>
                              <footer
                                className="pf-c-modal-box__footer"
                              >
                                <Button
                                  key="confirm"
                                  onClick={[Function]}
                                  variant="danger"
                                >
                                  <button
                                    aria-disabled={false}
                                    aria-label={null}
                                    className="pf-c-button pf-m-danger"
                                    data-ouia-component-id={26}
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    Delete baselines
                                  </button>
                                </Button>
                                <Button
                                  key="cancel"
                                  variant="link"
                                >
                                  <button
                                    aria-disabled={false}
                                    aria-label={null}
                                    className="pf-c-button pf-m-link"
                                    data-ouia-component-id={27}
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    type="button"
                                  >
                                    Cancel
                                  </button>
                                </Button>
                              </footer>
                            </ModalBoxFooter>
                          </div>
                        </ModalBox>
                      </div>
                    </FocusTrap>
                  </div>
                </Backdrop>
              </ModalContent>
            </Portal>
          </Modal>
        </DeleteBaselinesModal>
      </Connect(DeleteBaselinesModal)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedDeleteBaselinesModal should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    location={
      Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      }
    }
    navigationType="POP"
    navigator={
      Object {
        "action": "POP",
        "createHref": [Function],
        "createURL": [Function],
        "encodeLocation": [Function],
        "go": [Function],
        "index": 0,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(DeleteBaselinesModal)
        clearSelectedBaselines={[MockFunction]}
        deleteSelectedBaselines={[MockFunction]}
        fetchWithParams={[MockFunction]}
        modalOpened={true}
        selectedBaselineIds={Array []}
        tableId="CHECKBOX"
      >
        <DeleteBaselinesModal
          clearSelectedBaselines={[Function]}
          deleteSelectedBaselines={[Function]}
          fetchWithParams={[MockFunction]}
          modalOpened={true}
          revertBaselineFetch={[Function]}
          selectedBaselineIds={Array []}
          tableId="CHECKBOX"
        >
          <Modal
            actions={
              Array [
                <Button
                  onClick={[Function]}
                  ouiaId="delete"
                  variant="danger"
                >
                  Delete 0 selected baselines
                </Button>,
                <Button
                  ouiaId="cancel"
                  variant="link"
                >
                  Cancel
                </Button>,
              ]
            }
            appendTo={[Function]}
            aria-describedby=""
            aria-label=""
            aria-labelledby=""
            className="drift"
            hasNoBodyWrapper={false}
            isOpen={true}
            onClose={[Function]}
            ouiaSafe={true}
            showClose={true}
            title="Delete 0 selected baselines"
            titleIconVariant="warning"
            titleLabel=""
            variant="small"
          >
            <Portal
              containerInfo={
                <div>
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-7"
                        aria-labelledby="pf-modal-part-6"
                        aria-modal="true"
                        class="pf-c-modal-box drift pf-m-warning pf-m-sm"
                        data-ouia-component-id="OUIA-Generated-Modal-small-6"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-5"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="OUIA-Generated-Modal-small-6-ModalBoxCloseButton"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title pf-m-icon"
                            id="pf-modal-part-6"
                          >
                            <span
                              class="pf-c-modal-box__title-icon"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 576 512"
                                width="1em"
                              >
                                <path
                                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                />
                              </svg>
                            </span>
                            <span
                              class="pf-u-screen-reader"
                            >
                              Warning alert:
                            </span>
                            <span
                              class="pf-c-modal-box__title-text"
                            >
                              Delete 0 selected baselines
                            </span>
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-7"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-danger"
                            data-ouia-component-id="delete"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Delete 0 selected baselines
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="cancel"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <ModalContent
                actions={
                  Array [
                    <Button
                      onClick={[Function]}
                      ouiaId="delete"
                      variant="danger"
                    >
                      Delete 0 selected baselines
                    </Button>,
                    <Button
                      ouiaId="cancel"
                      variant="link"
                    >
                      Cancel
                    </Button>,
                  ]
                }
                aria-describedby=""
                aria-label=""
                aria-labelledby=""
                boxId="pf-modal-part-5"
                className="drift"
                descriptorId="pf-modal-part-7"
                hasNoBodyWrapper={false}
                isOpen={true}
                labelId="pf-modal-part-6"
                onClose={[Function]}
                ouiaId="OUIA-Generated-Modal-small-6"
                ouiaSafe={true}
                showClose={true}
                title="Delete 0 selected baselines"
                titleIconVariant="warning"
                titleLabel=""
                variant="small"
              >
                <Backdrop>
                  <div
                    className="pf-c-backdrop"
                  >
                    <ForwardRef
                      active={true}
                      className="pf-l-bullseye"
                      focusTrapOptions={
                        Object {
                          "clickOutsideDeactivates": true,
                          "tabbableOptions": Object {
                            "displayCheck": "none",
                          },
                        }
                      }
                    >
                      <FocusTrap
                        active={true}
                        className="pf-l-bullseye"
                        focusTrapOptions={
                          Object {
                            "clickOutsideDeactivates": true,
                            "tabbableOptions": Object {
                              "displayCheck": "none",
                            },
                          }
                        }
                        innerRef={null}
                        paused={false}
                        preventScrollOnDeactivate={false}
                      >
                        <div
                          className="pf-l-bullseye"
                        >
                          <ModalBox
                            aria-describedby="pf-modal-part-7"
                            aria-label=""
                            aria-labelledby="pf-modal-part-6"
                            className="drift pf-m-warning"
                            data-ouia-component-id="OUIA-Generated-Modal-small-6"
                            data-ouia-component-type="PF4/ModalContent"
                            data-ouia-safe={true}
                            id="pf-modal-part-5"
                            style={Object {}}
                            variant="small"
                          >
                            <div
                              aria-describedby="pf-modal-part-7"
                              aria-label={null}
                              aria-labelledby="pf-modal-part-6"
                              aria-modal="true"
                              className="pf-c-modal-box drift pf-m-warning pf-m-sm"
                              data-ouia-component-id="OUIA-Generated-Modal-small-6"
                              data-ouia-component-type="PF4/ModalContent"
                              data-ouia-safe={true}
                              id="pf-modal-part-5"
                              role="dialog"
                              style={Object {}}
                            >
                              <ModalBoxCloseButton
                                onClose={[Function]}
                                ouiaId="OUIA-Generated-Modal-small-6"
                              >
                                <Button
                                  aria-label="Close"
                                  className=""
                                  onClick={[Function]}
                                  ouiaId="OUIA-Generated-Modal-small-6-ModalBoxCloseButton"
                                  variant="plain"
                                >
                                  <ButtonBase
                                    aria-label="Close"
                                    className=""
                                    innerRef={null}
                                    onClick={[Function]}
                                    ouiaId="OUIA-Generated-Modal-small-6-ModalBoxCloseButton"
                                    variant="plain"
                                  >
                                    <button
                                      aria-disabled={false}
                                      aria-label="Close"
                                      className="pf-c-button pf-m-plain"
                                      data-ouia-component-id="OUIA-Generated-Modal-small-6-ModalBoxCloseButton"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe={true}
                                      disabled={false}
                                      onClick={[Function]}
                                      role={null}
                                      type="button"
                                    >
                                      <TimesIcon
                                        color="currentColor"
                                        noVerticalAlign={false}
                                        size="sm"
                                      >
                                        <svg
                                          aria-hidden={true}
                                          aria-labelledby={null}
                                          fill="currentColor"
                                          height="1em"
                                          role="img"
                                          style={
                                            Object {
                                              "verticalAlign": "-0.125em",
                                            }
                                          }
                                          viewBox="0 0 352 512"
                                          width="1em"
                                        >
                                          <path
                                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                          />
                                        </svg>
                                      </TimesIcon>
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </ModalBoxCloseButton>
                              <ModalBoxHeader
                                help={null}
                              >
                                <header
                                  className="pf-c-modal-box__header"
                                >
                                  <ModalBoxTitle
                                    id="pf-modal-part-6"
                                    title="Delete 0 selected baselines"
                                    titleIconVariant="warning"
                                    titleLabel=""
                                  >
                                    <h1
                                      className="pf-c-modal-box__title pf-m-icon"
                                      id="pf-modal-part-6"
                                    >
                                      <span
                                        className="pf-c-modal-box__title-icon"
                                      >
                                        <ExclamationTriangleIcon
                                          color="currentColor"
                                          noVerticalAlign={false}
                                          size="sm"
                                        >
                                          <svg
                                            aria-hidden={true}
                                            aria-labelledby={null}
                                            fill="currentColor"
                                            height="1em"
                                            role="img"
                                            style={
                                              Object {
                                                "verticalAlign": "-0.125em",
                                              }
                                            }
                                            viewBox="0 0 576 512"
                                            width="1em"
                                          >
                                            <path
                                              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                            />
                                          </svg>
                                        </ExclamationTriangleIcon>
                                      </span>
                                      <span
                                        className="pf-u-screen-reader"
                                      >
                                        Warning alert:
                                      </span>
                                      <span
                                        className="pf-c-modal-box__title-text"
                                      >
                                        Delete 0 selected baselines
                                      </span>
                                    </h1>
                                  </ModalBoxTitle>
                                </header>
                              </ModalBoxHeader>
                              <ModalBoxBody
                                id="pf-modal-part-7"
                              >
                                <div
                                  className="pf-c-modal-box__body"
                                  id="pf-modal-part-7"
                                >
                                  Deleting a baseline is permanent and cannot be undone.
                                </div>
                              </ModalBoxBody>
                              <ModalBoxFooter>
                                <footer
                                  className="pf-c-modal-box__footer"
                                >
                                  <Button
                                    key="confirm"
                                    onClick={[Function]}
                                    ouiaId="delete"
                                    variant="danger"
                                  >
                                    <ButtonBase
                                      innerRef={null}
                                      onClick={[Function]}
                                      ouiaId="delete"
                                      variant="danger"
                                    >
                                      <button
                                        aria-disabled={false}
                                        aria-label={null}
                                        className="pf-c-button pf-m-danger"
                                        data-ouia-component-id="delete"
                                        data-ouia-component-type="PF4/Button"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        onClick={[Function]}
                                        role={null}
                                        type="button"
                                      >
                                        Delete 0 selected baselines
                                      </button>
                                    </ButtonBase>
                                  </Button>
                                  <Button
                                    key="cancel"
                                    ouiaId="cancel"
                                    variant="link"
                                  >
                                    <ButtonBase
                                      innerRef={null}
                                      ouiaId="cancel"
                                      variant="link"
                                    >
                                      <button
                                        aria-disabled={false}
                                        aria-label={null}
                                        className="pf-c-button pf-m-link"
                                        data-ouia-component-id="cancel"
                                        data-ouia-component-type="PF4/Button"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        role={null}
                                        type="button"
                                      >
                                        Cancel
                                      </button>
                                    </ButtonBase>
                                  </Button>
                                </footer>
                              </ModalBoxFooter>
                            </div>
                          </ModalBox>
                        </div>
                      </FocusTrap>
                    </ForwardRef>
                  </div>
                </Backdrop>
              </ModalContent>
            </Portal>
          </Modal>
        </DeleteBaselinesModal>
      </Connect(DeleteBaselinesModal)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`DeleteBaselinesModal should render Delete baseline with baselineId 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[Function]}
        ouiaId="delete"
        variant="danger"
      >
        Delete 1 selected baseline
      </Button>,
      <Button
        onClick={[MockFunction]}
        ouiaId="cancel"
        variant="link"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="drift"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Delete 1 selected baseline"
  titleIconVariant="warning"
  titleLabel=""
  variant="small"
>
  Deleting a baseline is permanent and cannot be undone.
</Modal>
`;

exports[`DeleteBaselinesModal should render correctly 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[Function]}
        ouiaId="delete"
        variant="danger"
      >
        Delete 0 selected baselines
      </Button>,
      <Button
        onClick={[MockFunction]}
        ouiaId="cancel"
        variant="link"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="drift"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Delete 0 selected baselines"
  titleIconVariant="warning"
  titleLabel=""
  variant="small"
>
  Deleting a baseline is permanent and cannot be undone.
</Modal>
`;

exports[`DeleteBaselinesModal should render mount correctly 1`] = `
<DeleteBaselinesModal
  clearSelectedBaselines={[MockFunction]}
  deleteSelectedBaselines={[MockFunction]}
  fetchWithParams={[MockFunction]}
  modalOpened={true}
  selectedBaselineIds={Array []}
  toggleModal={[MockFunction]}
>
  <Modal
    actions={
      Array [
        <Button
          onClick={[Function]}
          ouiaId="delete"
          variant="danger"
        >
          Delete 0 selected baselines
        </Button>,
        <Button
          onClick={[MockFunction]}
          ouiaId="cancel"
          variant="link"
        >
          Cancel
        </Button>,
      ]
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className="drift"
    hasNoBodyWrapper={false}
    isOpen={true}
    onClose={[MockFunction]}
    ouiaSafe={true}
    showClose={true}
    title="Delete 0 selected baselines"
    titleIconVariant="warning"
    titleLabel=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-labelledby="pf-modal-part-1"
                aria-modal="true"
                class="pf-c-modal-box drift pf-m-warning pf-m-sm"
                data-ouia-component-id="OUIA-Generated-Modal-small-1"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Modal-small-1-ModalBoxCloseButton"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-m-icon"
                    id="pf-modal-part-1"
                  >
                    <span
                      class="pf-c-modal-box__title-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 576 512"
                        width="1em"
                      >
                        <path
                          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                    </span>
                    <span
                      class="pf-u-screen-reader"
                    >
                      Warning alert:
                    </span>
                    <span
                      class="pf-c-modal-box__title-text"
                    >
                      Delete 0 selected baselines
                    </span>
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-2"
                >
                  Deleting a baseline is permanent and cannot be undone.
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="delete"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete 0 selected baselines
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="cancel"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              onClick={[Function]}
              ouiaId="delete"
              variant="danger"
            >
              Delete 0 selected baselines
            </Button>,
            <Button
              onClick={[MockFunction]}
              ouiaId="cancel"
              variant="link"
            >
              Cancel
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label=""
        aria-labelledby=""
        boxId="pf-modal-part-0"
        className="drift"
        descriptorId="pf-modal-part-2"
        hasNoBodyWrapper={false}
        isOpen={true}
        labelId="pf-modal-part-1"
        onClose={[MockFunction]}
        ouiaId="OUIA-Generated-Modal-small-1"
        ouiaSafe={true}
        showClose={true}
        title="Delete 0 selected baselines"
        titleIconVariant="warning"
        titleLabel=""
        variant="small"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <ForwardRef
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                  "tabbableOptions": Object {
                    "displayCheck": "none",
                  },
                }
              }
            >
              <FocusTrap
                active={true}
                className="pf-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                    "tabbableOptions": Object {
                      "displayCheck": "none",
                    },
                  }
                }
                innerRef={null}
                paused={false}
                preventScrollOnDeactivate={false}
              >
                <div
                  className="pf-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-2"
                    aria-label=""
                    aria-labelledby="pf-modal-part-1"
                    className="drift pf-m-warning"
                    data-ouia-component-id="OUIA-Generated-Modal-small-1"
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-0"
                    style={Object {}}
                    variant="small"
                  >
                    <div
                      aria-describedby="pf-modal-part-2"
                      aria-label={null}
                      aria-labelledby="pf-modal-part-1"
                      aria-modal="true"
                      className="pf-c-modal-box drift pf-m-warning pf-m-sm"
                      data-ouia-component-id="OUIA-Generated-Modal-small-1"
                      data-ouia-component-type="PF4/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-0"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[MockFunction]}
                        ouiaId="OUIA-Generated-Modal-small-1"
                      >
                        <Button
                          aria-label="Close"
                          className=""
                          onClick={[MockFunction]}
                          ouiaId="OUIA-Generated-Modal-small-1-ModalBoxCloseButton"
                          variant="plain"
                        >
                          <ButtonBase
                            aria-label="Close"
                            className=""
                            innerRef={null}
                            onClick={[MockFunction]}
                            ouiaId="OUIA-Generated-Modal-small-1-ModalBoxCloseButton"
                            variant="plain"
                          >
                            <button
                              aria-disabled={false}
                              aria-label="Close"
                              className="pf-c-button pf-m-plain"
                              data-ouia-component-id="OUIA-Generated-Modal-small-1-ModalBoxCloseButton"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[MockFunction]}
                              role={null}
                              type="button"
                            >
                              <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </TimesIcon>
                            </button>
                          </ButtonBase>
                        </Button>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader
                        help={null}
                      >
                        <header
                          className="pf-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            id="pf-modal-part-1"
                            title="Delete 0 selected baselines"
                            titleIconVariant="warning"
                            titleLabel=""
                          >
                            <h1
                              className="pf-c-modal-box__title pf-m-icon"
                              id="pf-modal-part-1"
                            >
                              <span
                                className="pf-c-modal-box__title-icon"
                              >
                                <ExclamationTriangleIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 576 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                    />
                                  </svg>
                                </ExclamationTriangleIcon>
                              </span>
                              <span
                                className="pf-u-screen-reader"
                              >
                                Warning alert:
                              </span>
                              <span
                                className="pf-c-modal-box__title-text"
                              >
                                Delete 0 selected baselines
                              </span>
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-2"
                      >
                        <div
                          className="pf-c-modal-box__body"
                          id="pf-modal-part-2"
                        >
                          Deleting a baseline is permanent and cannot be undone.
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-c-modal-box__footer"
                        >
                          <Button
                            key="confirm"
                            onClick={[Function]}
                            ouiaId="delete"
                            variant="danger"
                          >
                            <ButtonBase
                              innerRef={null}
                              onClick={[Function]}
                              ouiaId="delete"
                              variant="danger"
                            >
                              <button
                                aria-disabled={false}
                                aria-label={null}
                                className="pf-c-button pf-m-danger"
                                data-ouia-component-id="delete"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                Delete 0 selected baselines
                              </button>
                            </ButtonBase>
                          </Button>
                          <Button
                            key="cancel"
                            onClick={[MockFunction]}
                            ouiaId="cancel"
                            variant="link"
                          >
                            <ButtonBase
                              innerRef={null}
                              onClick={[MockFunction]}
                              ouiaId="cancel"
                              variant="link"
                            >
                              <button
                                aria-disabled={false}
                                aria-label={null}
                                className="pf-c-button pf-m-link"
                                data-ouia-component-id="cancel"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                onClick={[MockFunction]}
                                role={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </ButtonBase>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </ForwardRef>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
</DeleteBaselinesModal>
`;
